style.css
/* #region RESET */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
/* #endregion /RESET */

/* #region DEBUG */

.debug {
    border: 2px dashed red;
}
/* #endregion /DEBUG */

/* #region GENERAL */
.container {
    max-width: 1380px;
    margin: 0 auto;
    padding: 40px 0;
}
.row {
    display: flex;
    /* flex-wrap: wrap; */
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}
/* #endregion GENERAL */

/* #region TYPOGRAPHY */
a {
    color: inherit; /* blue colors for links too */
    text-decoration: inherit; /* no underline */
}
body {
    font-family: 'Roboto', sans-serif;
}
/* #endregion TYPOGRAPHY */

/* #region HEADER */
header {
    background-color: #ff6900;
    position: sticky;
    top: 0;
    box-shadow: 0px -25px 20px -20px rgba(0,0,0,0.45), 0px 25px 20px -20px rgba(0,0,0,0.45);
    z-index: 2;
}
header .container {
    padding: 10px 0;
    color: white;
    font-size: small;
    /* font-weight: bold; */
}

.departments {
    width: 20%;
}
.menu {
    width: 20%;
    text-align: right;
}
.logo {
    width: 60%;
    text-align: center;
}
.menu i, .departments a {
    padding: 0 5px;
}
.logo img {
    max-height: 25px;
}
/* #endregion HEADER */

/* #region MAIN */

.col-33 {
    width: calc(100% / 3);
}

/* #region CARD */
.card {
    position: relative;
}
.card img {
    width: 100%;
}
.card .discount {
    position: absolute;
    bottom: 40px;
    left: 0;
    color: white;
    font-size: 10px;
    font-weight: bold;
    display: flex;
}
.discount .howmuch {
    background-color: red;
    padding: 3px 5px;
}
.discount .sustainability {
    background-color: green;
    padding: 3px 5px;
    border-left: 2px solid;
}
.card .like {
    position: absolute;
    top: 10px;
    right: 0;
    max-width: 100%;
    text-align: center;
    background-color: white;
    width: 50px;
    line-height: 50px;
    font-size: 35px;
}
.card:hover .like {
    display: block;
    color: red;
}
.card .card-image-hover {
    display: none;
}
.card:hover .card-image-hover {
    display: inline-block;
}
.card:hover .card-image-default {
    display: none;
}
.col-33 p {
    display: inline;
    font-size: 12px;
}
.final-price {
    color: red;
    font-weight: bold;
}
.col-33 >:last-child {
    text-decoration: line-through;
}
.container >:nth-child(2) {
    margin-top: 40px;
}
/* #endregion CARD */

/* #endregion MAIN */

/* #region FOOTER */
footer {
    background-color: #1a1a1a;
    border-bottom: 2px solid white;
    box-shadow: 0px -25px 20px -20px rgba(0,0,0,0.45), 0px 25px 20px -20px rgba(0,0,0,0.45);
    color: white;
}
footer p a {
    font-size: 10px;
    padding: 5px 5px 5px 0;
}
footer .container {
    padding: 25px 0;
}
.right-side {
    text-align: right;
}
.right-side p i:not(:last-child) {
    margin: 5px
}
/* #endregion FOOTER */

